--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,21 +2,4 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"
-    app:startDestination="@id/start2">
-
-    <activity
-        android:id="@+id/cameraActivity"
-        android:name="org.tensorflow.lite.examples.classification.CameraActivity"
-        android:label="activity_camera"
-        tools:layout="@layout/activity_camera" />
-    <fragment
-        android:id="@+id/start2"
-        android:name="org.tensorflow.lite.examples.classification.start"
-        android:label="fragment_start"
-        tools:layout="@layout/fragment_start" >
-        <action
-            android:id="@+id/action_start2_to_cameraActivity"
-            app:destination="@id/cameraActivity" />
-    </fragment>
-</navigation>
+    android:id="@+id/nav_graph" />
