plant recivler view

--- a/app/src/main/res/layout/fragment_plant_list.xml
+++ b/app/src/main/res/layout/fragment_plant_list.xml
@@ -6,9 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".plants.plantList">
 
-    <ListView
-        android:id="@+id/recipe_list_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/plantlistView"
+        android:layout_height="match_parent"
+        tools:context=".plants.plantList"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        android:layout_width="match_parent"/>
 
 </FrameLayout>
