--- a/app/src/main/res/layout/plant_list_item.xml
+++ b/app/src/main/res/layout/plant_list_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp">
-
-    <LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp">
+
+    <!--<android.support.v7.widget.CardView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_margin="5dp">-->
 
         <TextView
             android:id="@+id/title"
@@ -24,5 +24,5 @@
             android:id="@+id/group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+    <!--</android.support.v7.widget.CardView>-->
+</LinearLayout>
