--- a/app/src/main/res/layout/plant_list_item.xml
+++ b/app/src/main/res/layout/plant_list_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
+    android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
@@ -59,15 +59,7 @@
                     android:layout_height="40dp"
                     android:src="@drawable/manzanilla" />
             </androidx.cardview.widget.CardView>
-            <!--<ImageView-->
-                <!--android:layout_alignParentRight="true"-->
-                <!--android:layout_width="40dp"-->
-                <!--android:layout_height="40dp"-->
-                <!--android:contentDescription="@string/app_name"-->
-                <!--android:scaleType="centerCrop"-->
-                <!--android:src="@drawable/manzanilla"-->
-                <!--/>-->
-        </RelativeLayout>
+s        </RelativeLayout>
         <TextView
             android:id="@+id/description"
             android:layout_width="match_parent"
