--- a/app/src/main/res/layout/plant_list_item.xml
+++ b/app/src/main/res/layout/plant_list_item.xml
@@ -17,10 +17,10 @@
         <ImageView
             android:id="@+id/plant_item_image"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="150dp"
             android:contentDescription="@string/app_name"
             android:scaleType="centerCrop"
-            android:src="@drawable/manzanilla"
+            android:src="@drawable/tfl_logo"
             />
 
         <RelativeLayout
@@ -57,7 +57,7 @@
                     android:scaleType="centerCrop"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/manzanilla" />
+                    android:src="@drawable/ic_launcher" />
             </androidx.cardview.widget.CardView>
 s        </RelativeLayout>
         <TextView
