--- a/app/src/main/res/layout/plant_list_item.xml
+++ b/app/src/main/res/layout/plant_list_item.xml
@@ -4,16 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:clickable="true"
+    android:layout_marginHorizontal="12dp"
+    android:layout_marginVertical="8dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp">
-
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
         android:orientation="vertical">
-
         <ImageView
             android:id="@+id/plant_item_image"
             android:layout_width="match_parent"
@@ -22,9 +20,9 @@
             android:scaleType="centerCrop"
             android:src="@drawable/tfl_logo"
             />
-
         <RelativeLayout
-            android:padding="7dp"
+            android:padding="8dp"
+            android:layout_margin="6dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -37,12 +35,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:textSize="@dimen/TitleSize"
+                    android:textColor="@color/textPrimary"
+                    android:textSize="@dimen/textName"
                     android:text="Title" />
                 <TextView
                     android:id="@+id/group"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textSize="@dimen/textSmall"
                     android:text="group" />
             </LinearLayout>
             <androidx.cardview.widget.CardView
@@ -52,18 +52,12 @@
                 android:layout_alignParentRight="true"
                 app:cardCornerRadius="20dp"
                 android:elevation="0dp">
-
                 <ImageView
                     android:scaleType="centerCrop"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/ic_launcher" />
             </androidx.cardview.widget.CardView>
-s        </RelativeLayout>
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="its a description to display more and more to send a file with more la la la" />
+        </RelativeLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
