--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="bottom_sheet_corner_radius">15dp</dimen>
     <dimen name="bottom_sheet_top_padding">8dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="TitleSize">24dp</dimen>
+    <dimen name="textName">16dp</dimen>
+    <dimen name="textSmall">12dp</dimen>
 </resources>
