--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,13 +9,24 @@
         android:name="org.tensorflow.lite.examples.classification.plants.plantList"
         android:label="fragment_plant_list"
         tools:layout="@layout/fragment_plant_list" >
+        <argument
+            android:name="plantIdNumber"
+            app:argType="integer"
+            android:defaultValue="1"/>
         <action
             android:id="@+id/action_plantList_to_plantDetail"
-            app:destination="@id/plantDetail" />
+            app:destination="@id/plantDetail"
+            app:popUpTo="@id/plantList"
+            app:popUpToInclusive="false" />
     </fragment>
     <fragment
         android:id="@+id/plantDetail"
         android:name="org.tensorflow.lite.examples.classification.plants.PlantDetail"
         android:label="fragment_plant_detail"
-        tools:layout="@layout/fragment_plant_detail" />
+        tools:layout="@layout/fragment_plant_detail">
+        <argument
+            android:name="plantIdNumber"
+            app:argType="integer"
+            android:defaultValue="1"/>
+    </fragment>
 </navigation>
